# papagan

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish-npm-main.yml  release.yml
data/de/: trigrams.txt
data/en/: trigrams.txt  words.txt
data/es/: trigrams.txt
data/fr/: trigrams.txt  words.txt
data/it/: trigrams.txt  words.txt
data/nl/: trigrams.txt  words.txt
data/pl/: trigrams.txt  words.txt
data/pt/: trigrams.txt  words.txt
data/ru/: trigrams.txt  words.txt
data/tr/: trigrams.txt  words.txt
lang-detect/: Cargo.toml  build.rs
lang-detect-node/: Cargo.toml  index.d.ts  index.js  package.json
lang-detect-node/src/: lib.rs
lang-detect-py/: Cargo.toml  pyproject.toml
lang-detect-py/python/lang_detect/: __init__.py  __init__.pyi  _native.pyi
lang-detect-py/src/: lib.rs
lang-detect/examples/: bench_accuracy.rs  detect.rs
lang-detect/src/: detector.rs  lang.rs  lib.rs  score.rs
lang-detect/src/dict/: mod.rs
lang-detect/src/ngram/: model.rs
lang-detect/tests/: accuracy_regression.rs  integration.rs
papagan/: Cargo.toml  README.md  build.rs
papagan-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
papagan-node/examples/: bench-matrix.js  event-loop-latency.js
papagan-node/npm/darwin-arm64/: README.md  package.json
papagan-node/npm/darwin-x64/: README.md  package.json
papagan-node/npm/linux-arm64-gnu/: README.md  package.json
papagan-node/npm/linux-arm64-musl/: README.md  package.json
papagan-node/npm/linux-x64-gnu/: README.md  package.json
papagan-node/npm/linux-x64-musl/: README.md  package.json
papagan-node/npm/win32-x64-msvc/: README.md  package.json
papagan-node/src/: lib.rs
papagan-py/: Cargo.toml  README.md  pyproject.toml
papagan-py/bench/: matrix.py
papagan-py/python/papagan/: __init__.py  __init__.pyi  _native.pyi
papagan-py/src/: lib.rs
papagan/benches/: detect.rs
papagan/examples/: accuracy_matrix.rs  batch_routing_sweep.rs  batch_strategy_bench.rs  batch_sweep.rs  bench_accuracy.rs  bench_matrix.rs  detect.rs  find_misclassified.rs  parallel_sweep.rs
papagan/src/: detector.rs  lib.rs  parallel.rs  tokenize.rs
papagan/src/dict/: data.rs
papagan/src/ngram/: data.rs  mod.rs  model.rs
papagan/tests/: accuracy_regression.rs  integration.rs
papagan/tests/fixtures/: accuracy.tsv  accuracy_flores.tsv
reports/: accuracy-2026-04-16-dict-5k.md  accuracy-2026-04-16.md
scripts/: bench-matrix.sh
xtask/: Cargo.toml
xtask/src/: main.rs
