[package]
name = "papagan-node"
version = "0.1.3"
publish = false
description = "Node.js bindings for papagan"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
papagan = { path = "../papagan", default-features = false, features = ["all-langs", "parallel"] }
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
