[package]
name = "papagan-py"
version = "0.1.6"
publish = false
description = "Python bindings for papagan"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "papagan_py"
crate-type = ["cdylib"]

[dependencies]
papagan = { path = "../papagan", default-features = false, features = ["all-langs", "parallel"] }
pyo3 = { version = "0.28", features = ["abi3-py310"] }
