[package]
name = "xtask"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
bzip2 = "0.4"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
tar = "0.4"
ureq = "2"
unicode-normalization = "0.1"
